# FastShaders

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  GPU_COST_ANALYSIS.md  LICENSE  NODE_DESIGN_REQUIREMENTS.md  README.md  TSL_texture_info.md  index.html  node-designer.html  node-editor.html  package-lock.json  package.json  podest.html  project-structure.canvas  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  webgpu-xr-demo.html
.claude/: launch.json  settings.json  settings.local.json
ShaderCarousel/: README.md  Untitled-2.ipynb  benchmark.js  carousel.html  context.md  index.html  shaderloader.js  sphere-mover.js  vrprofiler02.js
ShaderFace/: PROTOCOL.md  aframe.html  bench.js  index.html  shaderRegistry.js
ShaderSphere/: README.md  bench-aframe.js  bench.js  index.html  shaderRegistry.js
Tests/: index.html  morph-triangles-watercolor.tsl.js
assets/: editor.worker-BrNlMYf3.js  index-5IX3exUQ.js  index-ABuOrB1z.js  index-ANeGDV0-.css  index-B-Hcdxpy.js  index-B1jU0JDH.js  index-B4BNFWCx.js  index-B6N7shp4.css  index-B9MVC0Z_.js  index-BFjBytL3.js  index-BIRZt-WM.js  index-BLdVQkQC.css  index-BRuWD17V.css  index-BVzi30Wj.js  index-BWBbvg9q.js  index-BdpskaUG.js  index-BftkAWCd.css  index-Bfu2-OgX.js  index-BhS2rumO.js  index-Bp-huGMa.js  index-BxZ4gsHo.css  index-C2O8LHqN.css  index-CAuh_2zf.css  index-CBoI-lcL.css  (+24 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bench_server.rs  main.rs
(+334 files in other folders)
